--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-'https://konradostrowskii.github.io/'
+{% extends 'base.html' %}
+
+{% block content %}
+  <p>This is my home page content!</p>
+{% endblock %}
