--- a/index.html
+++ b/index.html
@@ -24,18 +24,12 @@
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
-  <img src="" style="width:100%">
-  <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
-    <i class="fa fa-home w3-xxlarge"></i>
+  <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
   </a>
   <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-user w3-xxlarge"></i>
     <p>ABOUT</p>
-  </a>
-  <a href="#photos" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-eye w3-xxlarge"></i>
-    <p>PHOTOS</p>
   </a>
   <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-envelope w3-xxlarge"></i>
@@ -48,7 +42,6 @@
   <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
     <a href="#" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
     <a href="#about" class="w3-bar-item w3-button" style="width:25% !important">ABOUT</a>
-    <a href="#photos" class="w3-bar-item w3-button" style="width:25% !important">PHOTOS</a>
     <a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">CONTACT</a>
   </div>
 </div>
@@ -74,18 +67,28 @@
         I'm also dedicated to learning and growing my skills
     </p>
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
-    <p class="w3-wide">Photography</p>
-    <div class="w3-white">
+    <p class="w3-wide">Python</p>
+    <img src="https://www.python.org/static/favicon.ico" alt="Python Icon">
+
+    
       <div class="w3-dark-grey" style="height:28px;width:95%"></div>
-    </div>
-    <p class="w3-wide">Web Design</p>
-    <div class="w3-white">
+
+    <p class="w3-wide">Django</p>
+    <img src="https://static.djangoproject.com/img/favicon.ico"  float= left alt="Django Icon">
+    
       <div class="w3-dark-grey" style="height:28px;width:85%"></div>
-    </div>
-    <p class="w3-wide">Photoshop</p>
-    <div class="w3-white">
+  
+    <p class="w3-wide">Pandas</p>
+      <div class="w3-dark-grey" style="height:28px;width:95%"></div>
+    <p class="w3-wide">Quality Assurance</p>
       <div class="w3-dark-grey" style="height:28px;width:80%"></div>
-    </div><br>
+    <p class="w3-wide">Css</p>
+    <img src="https://www.w3.org/Icons/WWW/w3c_home_nb.png" alt="CSS Icon">
+      <div class="w3-dark-grey" style="height:28px;width:95%"></div>
+      <p class="w3-wide">HTML</p>
+      <img src="https://www.w3.org/Icons/HTML/html5_64.png" alt="HTML Icon">
+      <div class="w3-dark-grey" style="height:28px;width:95%"></div>
+    <br>
 
     <button class="w3-button w3-light-grey w3-padding-large w3-section">
       <i class="fa fa-download"></i> Download Resume
@@ -106,14 +109,8 @@
   
 <!-- Footer. This section contains an ad for W3Schools Spaces. You can leave it to support us. -->
 <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
- <p class="w3-small">This website was made with W3schools Spaces. Make your own free website today!</p>
- <a class="w3-button w3-round-xxlarge w3-small w3-light-grey" href="https://www.w3schools.com/spaces" target="_blank">Start now</a> 
+<i class="fa fa-github w3-hover-opacity"></i>
+<i class="fa fa-linkedin w3-hover-opacity"></i>
  <!-- End footer -->
 </footer>
 
