--- a/index.html
+++ b/index.html
@@ -109,8 +109,17 @@
   
 <!-- Footer. This section contains an ad for W3Schools Spaces. You can leave it to support us. -->
 <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
-<i class="fa fa-github w3-hover-opacity"></i>
-<i class="fa fa-linkedin w3-hover-opacity"></i>
+  <a href="https://github.com/konradostrowskii">
+      <i class="fa fa-github w3-hover-opacity" style="font-size: 70px;"></i>
+  </a>
+  <a href="https://www.linkedin.com/in/konrad-ostrowski/">
+  
+    <i class="fa fa-linkedin w3-hover-opacity" style="font-size: 70px;"></i>
+
+  </a>
+</footer>
+
+
  <!-- End footer -->
 </footer>
 
