--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
+  <a href="#home" class="w3-bar-item w3-button w3-padding-large w3-hover-black"></a>
   <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
   </a>
@@ -52,7 +53,7 @@
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> Konrad Ostrowski.</h1>
     <p>Associate Test Engineer</p>
-    <img src="{% static 'profile.jpg' %}" alt="My Image">
+    <img src="static/profile.jpg" alt="My Image">
   </header>
 
   <!-- About Section -->
