--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <!-- Navbar on small screens (Hidden on medium and large screens) -->
 <div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
   <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
-    <a href="#" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
+    <a href="#home" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
     <a href="#about" class="w3-bar-item w3-button" style="width:25% !important">ABOUT</a>
     <a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">CONTACT</a>
   </div>
@@ -60,10 +60,10 @@
     <h2 class="w3-text-light-grey">My Name</h2>
     <hr style="width:200px" class="w3-opacity">
     <p> I'm Associate Test Engineer with almost one year of experience in ensuring software quality through test case creation,
-        excecution manualy and automation using Python. I have worked collaboratively with development teams, 
-        excecuted testing activities, reported bugs and suggested improvements. 
+        execution manually and automation using Python. I have worked collaboratively with development teams, 
+        executed testing activities, reported bugs and suggested improvements. 
         I have understanding of software testing principles and techniques. 
-        I'm easy learner and I have a proven ability to communicate effectively and assimilate well into a team enviroment. 
+        I'm easy learner and I have a proven ability to communicate effectively and assimilate well into a team environment. 
         I'm also dedicated to learning and growing my skills
     </p>
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
