--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
-  <a href="#home" class="w3-bar-item w3-button w3-padding-large w3-hover-black"></a>
+  <a href="#home" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
   <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
   </a>
@@ -68,26 +68,11 @@
     </p>
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
     <p class="w3-wide">Python</p>
-    <img src="https://www.python.org/static/favicon.ico" alt="Python Icon">
-
-    
-      <div class="w3-dark-grey" style="height:28px;width:95%"></div>
-
     <p class="w3-wide">Django</p>
-    <img src="https://static.djangoproject.com/img/favicon.ico"  float= left alt="Django Icon">
-    
-      <div class="w3-dark-grey" style="height:28px;width:85%"></div>
-  
     <p class="w3-wide">Pandas</p>
-      <div class="w3-dark-grey" style="height:28px;width:95%"></div>
     <p class="w3-wide">Quality Assurance</p>
-      <div class="w3-dark-grey" style="height:28px;width:80%"></div>
     <p class="w3-wide">Css</p>
-    <img src="https://www.w3.org/Icons/WWW/w3c_home_nb.png" alt="CSS Icon">
-      <div class="w3-dark-grey" style="height:28px;width:95%"></div>
-      <p class="w3-wide">HTML</p>
-      <img src="https://www.w3.org/Icons/HTML/html5_64.png" alt="HTML Icon">
-      <div class="w3-dark-grey" style="height:28px;width:95%"></div>
+    <p class="w3-wide">HTML</p>
     <br>
 
     <button class="w3-button w3-light-grey w3-padding-large w3-section">
