--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <p class="w3-wide">Css</p>
     <p class="w3-wide">HTML</p>
     <br>
-
+    <a href="static/Konrad_Ostrowski.pdf" download>
     <button class="w3-button w3-light-grey w3-padding-large w3-section">
       <i class="fa fa-download"></i> Download Resume
     </button>
